[gd_scene load_steps=13 format=3 uid="uid://cgk5fsmvjoiek"]

[ext_resource type="Script" path="res://Выход.gd" id="1_1ri3d"]
[ext_resource type="Script" path="res://Модель.gd" id="1_7y0sd"]
[ext_resource type="Script" path="res://Camera3D.gd" id="1_vd87k"]
[ext_resource type="Script" path="res://Подсказка.gd" id="3_qnoxl"]
[ext_resource type="Script" path="res://Сохранение.gd" id="4_fikmt"]
[ext_resource type="Script" path="res://Закрыть.gd" id="6_2q5jp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dqw3x"]
cull_mode = 1
grow = true
grow_amount = 0.03

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mhdby"]
next_pass = SubResource("StandardMaterial3D_dqw3x")
albedo_color = Color(0.501961, 0.501961, 0.501961, 1)
grow_amount = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_djfo0"]
cull_mode = 1
albedo_color = Color(0, 0, 0, 1)
normal_scale = 3.85
heightmap_scale = 5.195
refraction_scale = -1.0
uv1_triplanar_sharpness = 0.329877
texture_repeat = false
grow = true
grow_amount = 0.03
proximity_fade_distance = 21.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4gkda"]
next_pass = SubResource("StandardMaterial3D_djfo0")
albedo_color = Color(0.588235, 0.294118, 0, 1)
grow_amount = 0.674

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fd51l"]
cull_mode = 1
grow = true
grow_amount = 0.03

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uoo5i"]
next_pass = SubResource("StandardMaterial3D_fd51l")
albedo_color = Color(0.156863, 0.447059, 0.2, 1)

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -0.1079, 4.98038, 4.98292)
script = ExtResource("1_vd87k")

[node name="CSGBox3D4" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.156229, 2.92401, 0.630203)
size = Vector3(0.610641, 0.587891, 0.597565)
material = SubResource("StandardMaterial3D_mhdby")

[node name="CSGBox3D15" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.87579, 3.49706, -1.35474)
size = Vector3(0.610641, 0.587891, 0.597565)
material = SubResource("StandardMaterial3D_mhdby")

[node name="CSGBox3D16" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.87579, 4.14162, -1.35474)
size = Vector3(0.610641, 0.587891, 0.597565)
material = SubResource("StandardMaterial3D_mhdby")

[node name="CSGBox3D6" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.156229, 3.56801, 0.630203)
size = Vector3(0.610641, 0.587891, 0.597565)
material = SubResource("StandardMaterial3D_mhdby")

[node name="CSGBox3D12" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.156229, 4.21478, 0.630203)
size = Vector3(0.610641, 0.587891, 0.597565)
material = SubResource("StandardMaterial3D_mhdby")

[node name="CSGBox3D" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.160391, 0.327481, 0.62976)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D7" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.156498, 0.986702, 0.62976)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D8" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.156498, 5.50402, 0.62976)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D9" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.156498, 2.25125, 0.62976)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D10" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.87962, 0.300732, -1.35024)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D14" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.87962, 2.84569, -1.35024)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D17" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.87962, 4.78537, -1.35024)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D11" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.156498, 4.86414, 0.62976)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D2" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.160405, 1.61006, 0.642395)
size = Vector3(0.594513, 0.56897, 0.591431)
material = SubResource("StandardMaterial3D_uoo5i")

[node name="CSGBox3D19" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06625, 3.5395, -4.1167)
size = Vector3(0.610641, 0.587891, 0.597565)
material = SubResource("StandardMaterial3D_mhdby")

[node name="CSGBox3D21" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.07041, 0.327481, -4.11714)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D22" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06652, 0.970142, -4.11714)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D24" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06652, 2.2497, -4.11714)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D37" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06652, 2.8911, -4.11714)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D26" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06652, 1.60514, -4.11714)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D25" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06652, 4.79282, -4.11714)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D36" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06652, 4.15299, -4.11714)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D28" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.68516, 3.5631, -5.47936)
size = Vector3(0.610641, 0.587891, 0.597565)
material = SubResource("StandardMaterial3D_mhdby")

[node name="CSGBox3D30" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.681, 0.289339, -5.4798)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D31" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.68489, 0.959693, -5.4798)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D32" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.68489, 5.52689, -5.4798)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D33" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.68489, 2.25009, -5.4798)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D39" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.68489, 2.90667, -5.4798)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D34" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.68489, 4.8723, -5.4798)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D38" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.68489, 4.20608, -5.4798)
visibility_range_fade_mode = 1
operation = 1
snap = 0.096238
collision_layer = 36103
size = Vector3(0.6, 0.6, 0.6)
material = SubResource("StandardMaterial3D_4gkda")

[node name="CSGBox3D35" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6914, 1.60062, -5.47812)
size = Vector3(0.594513, 0.56897, 0.591431)
material = SubResource("StandardMaterial3D_uoo5i")

[node name="CSGBox3D3" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88234, 0.962406, -1.35024)
size = Vector3(0.594513, 0.56897, 0.591431)
material = SubResource("StandardMaterial3D_uoo5i")

[node name="CSGBox3D5" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88234, 1.59161, -1.35024)
size = Vector3(0.594513, 0.56897, 0.591431)
material = SubResource("StandardMaterial3D_uoo5i")

[node name="CSGBox3D13" type="CSGBox3D" parent="." groups=["MeshInstance3D"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88234, 2.20746, -1.35024)
size = Vector3(0.594513, 0.56897, 0.591431)
material = SubResource("StandardMaterial3D_uoo5i")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.33196, 3.07478, 8.47881)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Модель" type="Button" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 31.0
offset_right = 280.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 25
text = "Построить пласт"
script = ExtResource("1_7y0sd")

[node name="Подсказка" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_top = 19.0
offset_right = -24.0
offset_bottom = 62.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "?"
script = ExtResource("3_qnoxl")

[node name="Выход" type="Button" parent="CanvasLayer"]
offset_left = 17.0
offset_top = 187.0
offset_right = 281.0
offset_bottom = 230.0
theme_override_font_sizes/font_size = 25
text = "Выход"
script = ExtResource("1_1ri3d")

[node name="Сохранение" type="Button" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 134.0
offset_right = 192.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 25
text = "Сохранение модели"
script = ExtResource("4_fikmt")

[node name="SeveOBJ" type="FileDialog" parent="CanvasLayer"]
initial_position = 2
size = Vector2i(500, 500)
access = 2

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Скважины"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.5
offset_top = -110.0
offset_right = 258.5
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Закрыть" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 7.0
offset_right = -9.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Х"
script = ExtResource("6_2q5jp")

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -109.0
offset_right = 259.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
text = "Для перемещения используйте клавиши:
 WSDA или стрелочки
Чтобы повернуть камеру зажмите левую кнопку мыши 
и водите по экрану."
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[connection signal="button_up" from="CanvasLayer/Модель" to="CanvasLayer/Модель" method="_on_button_up"]
[connection signal="button_up" from="CanvasLayer/Подсказка" to="CanvasLayer/Подсказка" method="_on_button_up"]
[connection signal="button_up" from="CanvasLayer/Выход" to="CanvasLayer/Выход" method="_on_button_up"]
[connection signal="button_up" from="CanvasLayer/Сохранение" to="CanvasLayer/Сохранение" method="_on_button_up"]
[connection signal="file_selected" from="CanvasLayer/SeveOBJ" to="CanvasLayer/Сохранение" method="_on_seve_obj_file_selected"]
[connection signal="button_up" from="CanvasLayer/Panel/Закрыть" to="CanvasLayer/Panel/Закрыть" method="_on_button_up"]
